crates/shell-parser/tests/snapshots/parser_snapshots__parameter_expansion__braced_variable.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo ${var}\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    ParameterExpansion(
                        "var",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
