crates/shell-parser/tests/snapshots/parser_snapshots__parameter_expansion__default_value.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo ${var:-default}\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    ParameterExpansionOp {
                        name: "var",
                        op: Default {
                            colon: true,
                            value: "default",
                        },
                        embedded: [],
                    },
                ],
            },
        ],
        redirections: [],
    },
)
