crates/shell-parser/tests/snapshots/parser_snapshots__parameter_expansion__special_variables.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo $? $! $$ $# $@ $* $0\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    Parameter(
                        "?",
                    ),
                ],
            },
            Word {
                parts: [
                    Parameter(
                        "!",
                    ),
                ],
            },
            Word {
                parts: [
                    Parameter(
                        "$",
                    ),
                ],
            },
            Word {
                parts: [
                    Parameter(
                        "#",
                    ),
                ],
            },
            Word {
                parts: [
                    Parameter(
                        "@",
                    ),
                ],
            },
            Word {
                parts: [
                    Parameter(
                        "*",
                    ),
                ],
            },
            Word {
                parts: [
                    Parameter(
                        "0",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
