crates/shell-parser/tests/snapshots/parser_snapshots__parameter_expansion__string_length.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo ${#var}\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    ParameterExpansionOp {
                        name: "var",
                        op: Length,
                        embedded: [],
                    },
                ],
            },
        ],
        redirections: [],
    },
)
