crates/shell-parser/tests/snapshots/parser_snapshots__parameter_expansion__strip_prefix.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo ${var##*.}\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    ParameterExpansionOp {
                        name: "var",
                        op: StripPrefix {
                            longest: true,
                            pattern: "*.",
                        },
                        embedded: [],
                    },
                ],
            },
        ],
        redirections: [],
    },
)
